--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "inkdrop-plugin-scroll-to-top",
+	"name": "scroll-to-top",
 	"main": "./lib/scrollToTop",
 	"version": "0.1.0",
-	"description": "Add scroll to top and scroll to bottom functionality in inkdrop",
+	"description": "Add scroll to top and scroll to bottom functionality to inkdrop",
 	"keywords": [],
 	"repository": "https://github.com/keith0305/inkdrop-plugin-scroll-to-top",
 	"license": "MIT",
